tests/paczka1/small_fuzzy/37626999.err
Error in line 6: JwOt4dM4 S611 8,7
Error in line 3: ZBGuyH S809 6,7
Error in line 11: ZBGuyH S611 78,0
